WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134855
[Cocoa] Client is not notified of same-document navigations
https://bugs.webkit.org/show_bug.cgi?id=134855
Summary
[Cocoa] Client is not notified of same-document navigations
mitz
Reported
2014-07-12 10:25:55 PDT
[Cocoa] Client is not notified of same-document navigations
Attachments
Add -_webView:navigation:didSameDocumentNavigation:
(18.20 KB, patch)
2014-07-12 10:35 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-07-12 10:35:17 PDT
Created
attachment 234804
[details]
Add -_webView:navigation:didSameDocumentNavigation:
mitz
Comment 2
2014-07-12 13:40:49 PDT
Fixed in <
http://trac.webkit.org/r171027
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug